CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

include(CMakeForceCompiler)

SET(CMAKE_SYSTEM_NAME SegaSaturn)

CMAKE_FORCE_C_COMPILER("/carl9170fw/toolchain/inst/bin/sh-elf-gcc" GNU)
SET(CMAKE_FIND_ROOT_PATH "/carl9170fw/toolchain/inst/bin")
SET(CMAKE_ASM_COMPILER "/carl9170fw/toolchain/inst/bin/sh-elf-as")
		
PROJECT(iapetus C)

#CONFIGURE_FILE(config.h.cmake config.h)

set(IAPETUS_VERSION_MAJOR 0)
set(IAPETUS_VERSION_MINOR 1)
set(IAPETUS_VERSION_PATCH 0)
set(IAPETUS_VERSION "${IAPETUS_VERSION_MAJOR}.${IAPETUS_VERSION_MINOR}.${IAPETUS_VERSION_PATCH}")

set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_PACKAGE_VERSION_MAJOR ${IAPETUS_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${IAPETUS_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${IAPETUS_VERSION_PATCH})
set(CPACK_PACKAGE_VENDOR "Theo Berkau")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "iapetus-${IAPETUS_VERSION}")
include(CPack)

SET(CMAKE_CONFIGURATION_TYPES Release)
add_subdirectory(doc)
add_subdirectory(src)
